--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.vwardi</groupId>
-    <artifactId>rest-api-template</artifactId>
+    <artifactId>calendar-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rest-api-template</name>
+    <name>calendar-api</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
